# trl-env

./: .gitignore  README.md  pypi_publish  pyproject.toml  test.py  uv_sync  uv_sync_linux
conf/: ds_zero2.json  ds_zero3.json
examples/: rollout_examples.py  train_example.py
experiment/: .gitignore  README.md  convert_checkpoint.py  pyproject.toml  submit_pbs.py  test.py  test_model_mlx.py  test_multi_cache.py  upload_huggingface.py
experiment/examples/: discrete_logarithm_env.py  discrete_logarithm_environment.py  discrete_logarithm_test.py  discrete_logarithm_train.py  environment.py  guess_env.py  rollout_examples.py
experiment/examples/discrete_logarithm/: discrete_logarithm_env.py  discrete_logarithm_test.py  discrete_logarithm_train.py  discrete_logarithm_train2.py  discrete_logarithm_train_instruct.py  discrete_logarithm_train_instruct_deepspeed.py  discrete_logarithm_train_instruct_kvcache.py  discrete_logarithm_train_instruct_long.py  discrete_logarithm_train_instruct_longer.py  discrete_logarithm_train_instruct_small.py  discrete_logarithm_train_kvcache.py  discrete_logarithm_v2_train_instruct.py
experiment/examples/discrete_logarithm_2/: discrete_logarithm_env.py  discrete_logarithm_train_instruct.py
experiment/examples/discrete_logarithm_mlx/: discrete_logarithm_test.py  discrete_logarithm_train_instruct.py
experiment/examples/discrete_logarithm_v2/: discrete_logarithm_env.py  discrete_logarithm_test.py  discrete_logarithm_train_instruct.py  discrete_logarithm_v2_train_instruct.py
experiment/examples/llm_engine/: api.py  client.py  consumer.py  engine.py  server.py
experiment/examples/others/: rollout_examples.py  train_example.py
experiment/examples/trl_trainer/: dataset.py  trainer.py  trainer_callback.py  trainer_config.py  trainer_util.py
mnt/output/qwen3.5-4b-tl64-cl512-b4-test-lora-guess/runs/Apr23_01-22-18_khanh-laptop/: events.out.tfevents.1776878538.khanh-laptop.65883.0
mnt/output/qwen3.5-4b-tl64-cl512-b4-test-lora-guess/runs/Apr23_12-27-10_khanh-desktop.local/: events.out.tfevents.1776918430.khanh-desktop.local.53504.0
obsolete/discrete_logarithm/: discrete_logarithm_env.py  discrete_logarithm_test.py  discrete_logarithm_train_instruct.py
obsolete/discrete_logarithm_mlx/: discrete_logarithm_train_instruct.py
obsolete/v1/: environment.py  processor.py  rollout.py  rollout_mlx.py
trl_env/: __init__.py  batch_rollout.py  batch_rollout_kvcache.py  decoder.py  decoder_transformer.py  decoder_vllm.py  engine.py  engine_transformer.py  environment.py  generate.py  generate_transformer.py  model.py  model_kvcache.py  processor.py  rollout.py  rollout_mlx.py  rollout_transformer.py  rollout_transformer_kvcache.py  trainer.py  trainer_config.py
trl_env/v2/: decoder_transformer.py  generate.py  generate_transformer.py  model.py  model_transformer.py  rollout.py  rollout_transformer.py  tokenizer.py
trl_trainer/: trainer.py
