[project]
name = "trl-env"
dynamic = ["version"]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jaxtyping>=0.3.9",
    "peft>=0.19.1",
    "python-dotenv>=1.2.2",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "transformers>=5.6.0",
    "trl>=1.2.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "trl_env/__init__.py"