[project]
name = "trl-env"
dynamic = ["version"]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jaxtyping",
    "torch",
    "transformers",
    "trl",
    "vllm",
]



[tool.hatch.version]
path = "trl_env/__init__.py"

[tool.uv.workspace]
members = ["experiment"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
