[project]
name = "experiment"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "trl-env",
    "mini-racer==0.14.*",
    "pydantic==2.13.*",
    "sympy==1.14.*",
    "peft==0.19.*",
    "python-dotenv==1.2.*",
    "tensorboard==2.20.*",
]

[tool.uv.sources]
trl-env = { workspace = true }
