[project]
name = "experiment"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "trl-env",
    "mini-racer",
    "pydantic",
    "sympy",
    "peft",
    "python-dotenv",
    "tensorboard",
    "jiwer",
    "deepspeed",   
    "mpi4py",
    "bitsandbytes",
    "mpi4py",
]

[tool.uv.sources]
trl-env = { workspace = true }
